--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -110,3 +110,200 @@
     }
   }
 }
+
+@media only screen and (max-width: 1667px) {
+  .home {
+    .banner {
+      .banner-content {
+        width: 95%;
+        .image {
+          width: 40%;
+          img {
+            width: 100%;
+          }
+          p {
+            span {
+              font-size: 2em;
+            }
+          }
+        }
+        .cards {
+          .card-plumbing {
+            width: 220px;
+            height: 340px;
+            h1 {
+              font-size: 1.4em;
+            }
+          }
+          .card-credit {
+            width: 220px;
+            height: 340px;
+            h1 {
+              font-size: 1.4em;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1135px) {
+  .home {
+    .banner {
+      .banner-content {
+        width: 95%;
+        flex-direction: column-reverse;
+        .image {
+          width: 60%;
+          img {
+            width: 100%;
+          }
+          p {
+            span {
+              font-size: 2em;
+            }
+          }
+        }
+        .cards {
+          width: 100%;
+          margin-top: 40px;
+          .card-plumbing {
+            padding: 20px;
+            width: 50%;
+            height: 155px;
+            h1 {
+              font-size: 1.4em;
+              margin: 0;
+            }
+            img {
+              width: 30%;
+            }
+          }
+          .card-credit {
+            width: 50%;
+            height: 155px;
+            padding: 20px;
+            h1 {
+              font-size: 1.4em;
+              margin: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  .home {
+    .banner {
+      .banner-content {
+        width: 95%;
+        flex-direction: column-reverse;
+        .image {
+          width: 60%;
+          img {
+            width: 100%;
+          }
+          p {
+            display: none;
+          }
+        }
+        .cards {
+          width: 100%;
+          margin-top: 40px;
+          .card-plumbing {
+            padding: 20px;
+            width: 50%;
+            height: 155px;
+            h1 {
+              font-size: 1.4em;
+              margin: 0;
+            }
+            img {
+              width: 30%;
+            }
+          }
+          .card-credit {
+            width: 50%;
+            height: 155px;
+            padding: 20px;
+            h1 {
+              font-size: 1.4em;
+              margin: 0;
+            }
+          }
+        }
+      }
+    }
+    .services-logos {
+      .services {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        .service {
+          width: 100%;
+          justify-content: center;
+          font-weight: normal;
+          flex-direction: column;
+          text-align: center;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .home {
+    .banner {
+      .banner-content {
+        .image {
+          width: 80%;
+        }
+        .cards {
+          width: 100%;
+          flex-direction: column;
+          align-items: center;
+          .card-plumbing {
+            padding: 30px;
+            width: 80%;
+            height: 100px;
+            h1 {
+              font-size: 1.4em;
+              margin: 0;
+            }
+            img {
+              width: 30%;
+            }
+          }
+          .card-credit {
+            padding: 30px;
+            width: 80%;
+            height: 100px;
+            h1 {
+              font-size: 1.4em;
+              margin: 0;
+            }
+          }
+        }
+      }
+    }
+    .services-logos {
+      .services {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        .service {
+          width: 100%;
+          justify-content: center;
+          font-weight: normal;
+          flex-direction: column;
+          text-align: center;
+        }
+      }
+    }
+  }
+}
