--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -267,7 +267,7 @@
           flex-direction: column;
           align-items: center;
           .card-plumbing {
-            padding: 30px;
+            padding: 50px 30px;
             width: 80%;
             height: 100px;
             h1 {
@@ -279,7 +279,7 @@
             }
           }
           .card-credit {
-            padding: 30px;
+            padding: 50px 30px;
             width: 80%;
             height: 100px;
             h1 {
