--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -16,6 +16,7 @@
       width: 30%;
       min-width: 400px;
       position: relative;
+      background-color: #fff;
       padding: 30px;
       .action-top-buttons {
         margin-bottom: 50px;
